--- a/aoc2025.cabal
+++ b/aoc2025.cabal
@@ -5,7 +5,7 @@ build-type: Simple
 
 library
   hs-source-dirs: code
-  exposed-modules: Day01, Day02, Day03
+  exposed-modules: Day01, Day02, Day03, Day04
   build-depends: base >=4.18 && <5,
                  split >=0.2.5,
   default-language: Haskell2010
